Commitando alterações nas classes

--- a/src/main/webapp/FormularioContato.html
+++ b/src/main/webapp/FormularioContato.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
-	<form name="envioemail" action="EmailEx">
+	<form name="FormContato" action="envioemail">
 		<div class="box">
 			<h1>Formulario de Contato :</h1>
 
@@ -23,5 +23,6 @@
 				value="Limpar" />
 			</label>
 		</div>
+	</form>
 </body>
 </html>
