Alterações no index.html e no style.css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<link rel="stylesheet" href="static/css/style.css" />
+<title>Email 7k</title>
 </head>
 <body>
+	<div class="box imgFile">
+
+		<center>
+			<a href="FormularioContato.html">Formulário de Contato<img
+				src="static/img/email-marketing-256.png"></a>
+		</center>
+	</div>
 
 </body>
 </html>
