Commitando testes unitários no JUnit, sendo 2 classes para demonstrar a utilização de testes no JUnit e uma classe para a suite de testes

--- a/src/main/webapp/FormularioContato.html
+++ b/src/main/webapp/FormularioContato.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Emails 7k</title>
 <link rel="stylesheet" href="static/css/style.css" />
 </head>
@@ -11,7 +11,7 @@
 			<h1>Formulario de Contato :</h1>
 
 			<label> <span>Nome Completo</span> <input type="text"
-				class="input_text" name="nome" id="name" required="required" placeholder="Jão Mendes... Marcio Aroldo..."/>
+				class="input_text" name="nome" id="name" required="required" placeholder="JÃ£o Mendes... Marcio Aroldo..."/>
 
 			</label> <label> <span>Email</span> <input type="text"
 				class="input_text" name="email" id="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required="required" autocomplete="off" placeholder="example@example.com"/>
