--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <link rel="stylesheet" href="static/css/style.css" />
-<title>Email 7k</title>
+<title>Emails 7k</title>
 </head>
 <body>
 	<div class="box imgFile">
 
 		<center>
-			<a href="FormularioContato.html">Formulário de Contato<img
+			<a href="FormularioContato.html">FormulÃ¡rio de Contato<img
 				src="static/img/email-marketing-256.png"></a>
 		</center>
 	</div>
